Add ToonSilhouetteEffect.qml, ToonSilhouette.vert and ToonSilhouette.frag
These files are a combination of Toon and Silhouette effect. The
toyplane may have a good rendering result, and this is what I want.

--- a/QML.qrc
+++ b/QML.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>ToonEffect.qml</file>
         <file>SilhouetteEffect.qml</file>
+        <file>ToonSilhouetteEffect.qml</file>
     </qresource>
 </RCC>
