--- a/Shaders.qrc
+++ b/Shaders.qrc
@@ -4,5 +4,7 @@
         <file>Toon.vert</file>
         <file>Silhouette.frag</file>
         <file>Silhouette.vert</file>
+        <file>ToonSilhouette.frag</file>
+        <file>ToonSilhouette.vert</file>
     </qresource>
 </RCC>
